--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mongodb
+
+server.error.include-stacktrace=never
